# 2025_DB_final_project

./: .dockerignore  .env  README.md  docker-compose.yml
backend/: .env  Dockerfile  app.py  pyproject.toml  requirements.txt
backend/routes/: auth.py  favorite.py  restaurant.py  review.py
backend/utils/: db.py  db_config.py
sql/: tesr.sql
